tests/sources/invalid/match/match_pattern_bad_binding.fire
// Parser error: match pattern payload binding list containing a token that
// is not a valid field-name identifier.

enum Shape {
    Circle(radius: float64),
    Point
}

fn match_pattern_bad_binding(s: Shape) -> void {
    match s {
        Shape.Circle(5) -> 1  //~ ERROR FS-PARSE-0010 @22
//~^ ERROR FS-PARSE-0010 @22
//~^^ ERROR FS-PARSE-0010 @22
        _ -> 0
    }
}
